整理笔记结构

--- a/Django/钩子函数.md
+++ b/Django/钩子函数.md
@@ -1,3 +1,7 @@
+[toc]
+
+---
+
 参考：<br>
 [Django signal 使用总结](https://segmentfault.com/a/1190000008455657)
 
@@ -8,14 +12,16 @@
 
 <br>
 
-#### 我的理解：像信息通知类的处理，如果收到了某特定信息，就去通知其他 module 做特定的处理
+- **我的理解：**
+
+像信息通知类的处理，如果收到了某特定信息，就去通知其他 module 做特定的处理
 <br>
 
 ## 最佳使用场景
-##### 通知类　
+### 通知类　
 通知是signal最常用的场景之一。<br>例如，在论坛中，在帖子得到回复时，通知楼主。<br>从技术上来讲，我们可以将通知逻辑放在回复保存时，但是这并不是一个好的处理方式，这样会时程序耦合度增大，不利于系统的后期扩展维护。<br>如果我们在回复保存时，只发一个简单的信号，外部的通知逻辑拿到信号后，再发送通知，这样回复的逻辑和通知的逻辑做到了分开，后期维护扩展都比较容易。
 
-##### 初始化类
+### 初始化类
 信号的另一个列子便是事件完成后，做一系列的初始化工作。
 
 <br>
