--- a/python/线程/协程-看最后的例子一定能理解.md
+++ b/python/线程/协程-看最后的例子一定能理解.md
@@ -1,4 +1,8 @@
-[原文](http://python.jobbole.com/86069/)
+[toc]
+
+---
+
+[非原创 出处](http://python.jobbole.com/86069/)
 
 # Python协程：从yield/send到async/await
 
