--- a/python/装饰器.md
+++ b/python/装饰器.md
@@ -304,6 +304,35 @@ class Hint(object):
             return func(*args, **kwargs)     # 正式调用主要处理函数
         return wrapper
 ```
+
+- 例 2
+```py
+import time
+
+# 类装饰器
+class LogTime:
+    def __init__(self):
+        pass
+
+    def __call__(self, func):    # 作为外层函数
+        def _inner(*args, **kwargs):
+            beg = time.time()
+            res = func(*args, **kwargs) # 执行函数
+            print("time: {}".format(time.time()-beg))
+            return res
+        return _inner
+    
+
+# 调用类装饰器
+@LogTime()  # 要加上括号，表示定义类实例
+def func1():
+    time.sleep(1)
+
+# 测试用例
+if __name__ == '__main__':
+    func1()
+```
+
 小结
 本文总结了什么是Python的装饰器及其工作原理，并重点介绍了嵌套函数和闭包原理。最后详细展示了如何编写一个通用装饰器及带参数的高级装饰器, 包括使用类来编写装饰器。大家要熟练掌握哦。看不懂的可以先加入微信收藏以后再反复阅读。
 
