--- a/python/生成器.md
+++ b/python/生成器.md
@@ -1,3 +1,7 @@
+[toc]
+
+---
+
 知乎原创文 转载要经过作者同意：
 https://www.zhihu.com/question/20829330/answer/133606850
 
@@ -226,3 +230,8 @@ for population in gen:
 
 因此，生成器的唯一注意事项就是：**生成器只能遍历一次**。
 
+
+
+## ⑤.**什么时候用生成器？**
+- **要生成大数据时**<br>因为它节约内存 有懒加载特性 next一下才会出一个数据 <br><br>
+- **要实现迭代时**
