--- a/python/电子书/《编写高质量代码改善Python程序的91个建议》/第 6 章 内部机制.md
+++ b/python/电子书/《编写高质量代码改善Python程序的91个建议》/第 6 章 内部机制.md
@@ -466,107 +466,173 @@ print(ROClass.__dict__)
 print(a.name)
 ```
 
-## 62：掌握 metaclass
+## 62：掌握元类 metaclass
 
 什么是元类？
+* 元类是关于类的类，是 **==类的模版==**
+* 元类是用来 <u>**控制类的创建过程**</u> 的，正如类是创建对象的模版一样
+* ==**元类的实例为类**==，正如类的实例为对象
 
-* 元类是关于类的类，是类的模版
-* 元类是用来控制如何创建类的，正如类是创建对象的模版一样
-* 元类的实例为类，正如类的实例为对象
+当使用关键字 class 的时候，Python 解释器在执行的时候就会创建一个对象
+（这里的对象是指类，而非类的实例）
 
-当使用关键字 class 的时候，Python 解释器在执行的时候就会创建一个对象（这里的对象是指类而非类的实例）
-
-既然类是对象，那么它就有其所属的类型，也一定还有什么东西能够控制它的生成。通过 type 查看会发现 UserClass 的类型为 type，而其对象 UserClass() 的类型为类 A。
+既然类是对象，那么它就有其所属的类型，也一定还有什么东西能够控制它的生成。
+通过 type 查看会发现 UserClass 的类型为 type，而其对象 UserClass() 的类型为类 A。
 
 同时我们知道 type 还可以这样使用：
-
-`type(类名，父类的元组（针对继承的情况，可以为空)，包含属性的字典（名称和值））`
-
-type 通过接受类的描述符作为参数返回一个对象，这个对象可以被继承，属性能够被访问，它实际是一个类，其创建由 type 控制，由 type 所创建的对象的 `__class__` 属性为 type。type 实际上是 Python 的一个内建元类，用来指导类的生成。当然，除了使用内建元类 type，用户也可以通过继承 type 来自定义元类。
-
-利用元类实现强制类型检查：
-
-```python
-class TypeSetter(object):
-    def __init__(self, fieldtype):
-        self.fieldtype = fieldtype
-    def is_valid(self, value):
-        return isinstance(value, self.fieldtype)
-class TypeCheckMeta(type):
-    def __new__(cls, name, bases, dict):
-        return super(TypeCheckMeta, cls).__new__(cls, name, bases, dict)
-    def __init__(cls, name, bases, dict):
-        cls._fields = {}
-        for key, value in dict.items():
-            if isinstance(value, TypeSetter):
-                cls._fields[key] = value
-  def sayHi(cls):
-      print("Hi")
+```py
+type(类名，父类的元组（针对继承的情况，可以为空)，包含属性的字典（名称和值））
 ```
 
-TypeSetter 用来设置属性的类型，TypeCheckMeta 为用户自定义的元类，覆盖了 type 元类中的 `__new__()` 方法和 `__init__()` 方法，虽然也可以直接使用 `TypeCheckMeta(name, bases, dict)` 这种方式来创建类，但更为常见的是在需要被生成的类中设置 `__metaclass__` 属性，两种用法是等价的：
+type 通过接受类的描述符作为参数，返回一个对象，
+这个对象可以被继承，属性能够被访问，它实际是一个类，
+其创建由 type 控制，由 type 所创建的对象的 `__class__` 属性为 type。
+
+<u>**type 实际上是 Python 的一个内建元类，用来指导类的生成。**</u>
+当然，除了使用内建元类 type，用户也可以<u>通过 ==**继承 type**== 来自定义元类</u>。
+
+==**当子类中设置了 `(metaclass=元类)` 的时候，所有继承自该元类的子类都将使用所设置的元类来指导类的生成。**==
+
+
+- 例：利用元类实现强制类型检查：
 
 ```python
-class TypeCheck(object):
-    __metaclass__ = TypeCheckMeta
-    def __setattr__(self, key, value):
+# 用来设置属性的类型
+class TypeSetter(object):
+
+    def __init__(self, fieldtype):
+        self.fieldtype = fieldtype
+
+    def is_valid(self, value):
+        return isinstance(value, self.fieldtype)
+
+"""
+通过 继承 type 为用户自定义的元类，覆盖了 type 元类中的 __new__() 方法和 __init__() 方法
+控制类的创建过程，若某个类的 metaclass 被设置为 TypeCheckMeta 这个类名，
+其创建和初始化过程将由 TypeCheckMeta 中的 __new__() 和 __init__()控制
+"""
+class TypeCheckMeta(type):
+
+    def __new__(cls, name, bases, dict):    # 控制类的创建过程
+        return super(TypeCheckMeta, cls).__new__(cls, name, bases, dict)
+
+    def __init__(cls, name, bases, dict):   # 控制类的初始化过程
+        # dict: 内置 __dict__ 变量
+        # print("\nname: {},\nbases: {},\ndict: {}\n".format(name, bases, dict))
+        cls._fields = {}
+        for key, value in dict.items():     
+            if isinstance(value, TypeSetter):   # 只保留用户设置的 TypeSetter 类型属性，内置的属性不要
+                cls._fields[key] = value
+        # print("cls._fields: \n{}".format(cls._fields))
+
+    def say_hi(cls):    # 类方法，不能用实例对象调用，要用 类名.say_hi() 调用
+        print("hi")
+
+
+class TypeCheck(metaclass=TypeCheckMeta):   # TypeCheck 创建过程由 TypeCheckMeta 中的 __new__() 和 __init__()控制
+    # __metaclass__ = TypeCheckMeta         # 注意：python3 中弃用了这种使用元类的方式，用上面那种
+    def __setattr__(self, key, value):      # TypeCheck 实例被设置属性时调用此函数
         if key in self._fields:
             if not self._fields[key].is_valid(value):
                 raise TypeError("Invalid type for field")
             super(TypeCheck, self).__setattr__(key, value)
             
+            
 class MetaTest(TypeCheck):
-    name = TypeSetter(str)
-    num = TypeSetter(int)
+    name = TypeSetter(str)  # 设置 name 属性时类型必须为 str
+    num = TypeSetter(int)   # 设置 num 属性时类型必须为 int
+    # 初始化时在 
     
-mt = MetaTest()
-mt.name = "apple"
-mt.num = "test"
+
+meta_test = MetaTest()
+# 在 __init__() 中的 dict 值，是类的 __dict__ 属性值：
+# dict: {
+#   '__module__': '__main__', 
+#   '__qualname__': 'MetaTest', 
+#   'name': <__main__.TypeSetter object at 0x00300FF0>, 
+#   'num': <__main__.TypeSetter object at 0x00317030>
+# }
+
+meta_test.name = "apple"
+meta_test.num = "test"     # TypeError
 ```
 
-当类中设置了 `__metaclass__` 属性的时候，所有继承自该类的子类都将使用所设置的元类来指导类的生成。
+上述程序中：
+- **`TypeCheckMeta` ：元类，通过集成 type 定义。**
+控制类的特征，所有套用这个元类的类都讲拥有 `TypeCheckMeta` 中的 `__new__()` 和 `__init__()` 中定义的特征
+- **`TypeCheck` ：套用了元类中定义的特征的类。**
+  - 定义时使用`class TypeCheck(metaclass=TypeCheckMeta)` 来进行元类关系绑定，
+  - 当`TypeCheck`类创建和实例化时都将执行`TypeCheckMeta` 元类中的 `__new__()` 和 `__init__()`
 
-实际上，在新式类中当一个类未设置 `__metaclass__` 属性的时候，它将使用默认的 `type` 元类来生成类。而当该属性被设置时查找规则如下：
+<u></u>
+
+<!-- 由于 python3 中 __metaclass__ 的使用已经变化，下面这段仅适合 python2  -->
+<!-- 实际上，在新式类中当一个类未设置 `__metaclass__` 的时候，它将使用默认的 `type` 元类来生成类。
+而当该属性被设置时查找规则如下：
 
 * 如果存在 `dict["__metaclass__"]`，则使用对应的值来构建类；否则使用其父类 `dict["__metaclass__"]` 中所指定的元类来构建类，当父类中也不存在指定的 `metaclass` 的情形下使用默认元类 type。
-* 对于古典类，条件 1不满足的情况下，如果存在全局变量 `__metaclass__`，则使用该变量所对应的元类来构建类；否则使用 `type.ClassType`。
+* 对于古典类，条件 1不满足的情况下，如果存在全局变量 `__metaclass__`，则使用该变量所对应的元类来构建类；否则使用 `type.ClassType`。 -->
 
-需要额外提醒的是，元类中所定义的方法为其所创建的类的类方法，并不属于该类的对象。比如上例中的 `mt.sayHi()` 会抛出异常，正确调用方法为：`MetaTest.sayHi()`。
+需要额外提醒的是:
+**==元类中所定义的方法为其所创建的类的类方法，并不属于该类的对象。==**
+比如上例中的 `mt.sayHi()` 会抛出异常，
+正确调用方法为：`MetaTest.sayHi()`。
+<br>
 
-什么情况下会用到元类？有句话是这么说的：当你面临一个问题还在纠结要不要使用元类的时候，往往会有其他的更为简单的解决方案。
+- **什么情况下会用到元类？**
 
-几个使用元类的场景：
+有句话是这么说的：
+当你面临一个问题还在纠结要不要使用元类的时候，往往会有其他的更为简单的解决方案。
 
-* 利用元类来实现单例模式：
+- **几个使用元类的场景：**
 
-  ```python
-  class Singleton(type):
-      def __init__(cls, name, bases, dic):
-          super(Singleton, cls).__init__(name, bases, dic)
-          cls.instance = None
-      def __call__(cls, *args, **kwargs):
-          if cls.instance is None:
-              cls.instance = super(Singleton, cls).__call__(*args, **kwargs)
-          else:
-              print("warning: only allowed to create one instance, minstance already exists!")
-          return cls.instance
+**例 ①：利用元类来实现单例模式：**
 
-  class MySingleton(object):
-      __metaclass__ = Singleton
-  ```
+```python
+# 复制到 py 文件中看
+class Singleton(type):
 
-* 第二个例子来源于 Python 的标准库 string.Template.string，它提供简单的字符串替换功能。`Template("$name $age").substitute({"name":"admin"}, age=26)`
+    def __init__(cls, name, bases, dic):
+        super(Singleton, cls).__init__(name, bases, dic)
+        cls.instance = None
 
-  该标准库的源代码中就用到了元类，`Template` 的元类为 `_TemplateMetaclass`。`_TemplateMetaclass` 的 `__init__()` 方法通过查找属性（pattern、delimiter 和 idpattern）并将其构建为一个编译好的正则表达式存放在 pattern 属性中。用户如果需要自定义分隔符（delimiter）可以通过继承 Template 并覆盖它的类属性 delimiter 来实现。
+    def __call__(cls, *args, **kwargs):
+        if cls.instance is None:
+            cls.instance = super(Singleton, cls).__call__(*args, **kwargs)
+        else:
+            print("warning: only allowed to create one instance, minstance already exists!")
+        return cls.instance
+
+
+class MySingleton(object):
+    __metaclass__ = Singleton
+```
+
+
+**例 ②： Python 的标准库 `string.Template.string`**
+
+它提供简单的字符串替换功能：
+
+`Template("$name $age").substitute({"name":"admin"}, age=26)`
+
+该标准库的源代码中就用到了元类，`Template` 的元类为 `_TemplateMetaclass`。
+`_TemplateMetaclass` 的 `__init__()` 方法通过查找属性（pattern、delimiter 和 idpattern）并将其构建为一个编译好的正则表达式存放在 pattern 属性中。
+用户如果需要自定义分隔符（delimiter）可以通过继承 Template 并覆盖它的类属性 delimiter 来实现。
 
   另外在 Django ORM、AOP 编程中也有大量使用元类的情形。
 
 
-谈谈关于元类需要注意的几点：
+**谈谈关于元类需要注意的几点：**
 
-* 区别类方法与元方法（定义在元类中的方法）。元方法可以从元类或者类中调用，而不能从类的实例中调用；但类方法可以从类中调用，也可以从类的实例中调用
-* 多继承需要严格限制，否则会产生冲突。因为 Python 解释器并不知道多继承的类是否兼容，因此会发出冲突警告。解决冲突的办法是重新定义一个派生的元类，并在要集成的类中将其 `__metaclass__` 属性设置为该派生类。
+* 区别类方法与元方法（定义在元类中的方法）。
+    - **元方法** 可以从元类或者类中调用，而不能从类的实例中调用；
+    - **类方法** 可以从类中调用，也可以从类的实例中调用
+    <br>
+* 多继承需要严格限制，否则会产生冲突。
+因为 Python 解释器并不知道多继承的类是否兼容，因此会发出冲突警告。
+解决冲突的办法是重新定义一个派生的元类，并在要集成的类中将其 `__metaclass__` 属性设置为该派生类。
 
+<br>
 <br>
 
 ## **63：熟悉 Python 对象协议 √**
