--- a/python/电子书/《流畅的python》/code/18章 使用asyncio包处理并发/官方 asyncio 文档学习/地址.md
+++ b/python/电子书/《流畅的python》/code/18章 使用asyncio包处理并发/官方 asyncio 文档学习/地址.md
@@ -1,1 +1,382 @@
 https://docs.python.org/zh-cn/3/library/asyncio-task.html
+
+# 目录
+
+[toc]
+
+---
+
+## 协程
+
+### asyncio 中的协程定义
+
+**<u>协程 通过 `async`/`await` 语法进行声明</u>**，是编写 asyncio 应用的推荐方式。 
+
+例如，以下代码段（需要 Python 3.7+）会打印 "hello"，等待 1 秒，再打印 "world":
+
+
+```py
+
+"""
+简单地调用一个协程并不会将其加入执行日程
+"""
+
+import asyncio
+
+async def main():       # asyncio 语法：函数前面加上 async 就表示这是个协程
+    print('hello')
+    await asyncio.sleep(1)  # await 表异步执行，交给 asyncio 控制
+    print('world')
+
+
+# ----------------------------------------------------------
+asyncio.run(main())
+# hello
+# world
+
+# ----------------------------------------------------------
+# main()              # 简单地调用一个协程并不会将其加入执行日程
+# <coroutine object main at 0x1053bb7c8>
+```
+
+### asyncio 三种主要机制
+
+要真正运行一个协程，asyncio 提供了三种主要机制:
+
+**① `asyncio.run()`** 函数用来运行最高层级的入口点 "main()" 函数 (参见上面的示例。)
+
+**② 等待一个协程。** <a href="#wait">查看示例</a>
+   
+**③ `asyncio.create_task()`** 函数用来并发运行作为 asyncio 任务 的多个协程。<a href="#create_task">查看示例</a>
+
+<br>
+
+**示例代码：**
+
+- ② 等待一个协程。示例代码
+<a id="wait"></a>
+
+```py
+import asyncio
+import time
+
+async def say_after(delay, what):
+    await asyncio.sleep(delay)
+    print(what)
+
+async def main():
+    print(f"started at {time.strftime('%X')}")
+
+    await say_after(1, 'hello')     # 等待一个协程
+    await say_after(2, 'world')
+
+    print(f"finished at {time.strftime('%X')}")
+
+
+# ------------------------------------
+asyncio.run(main())         # asyncio.run() 函数用来运行最高层级的入口点
+# started at 17:13:52
+# hello                     # 等待 1 秒后打印 "hello"
+# world                     # 再次 等待 2 秒后打印 "world"
+# finished at 17:13:55
+```
+
+
+<a id="create_task"></a>
+
+让我们修改以上示例，并发 运行两个 say_after 协程:
+
+③ asyncio.create_task() 函数用来并发运行作为 asyncio 任务 的多个协程。示例代码
+
+可以看到，跟 ② 的示例相比，快了一秒，因为是并发
+
+```py
+import asyncio
+import time
+
+async def say_after(delay, what):
+    await asyncio.sleep(delay)
+    print(what)
+
+async def main():
+    task1 = asyncio.create_task(say_after(1, 'hello'))
+    task2 = asyncio.create_task(say_after(2, 'world'))
+
+    print(f"started at {time.strftime('%X')}")
+
+    # Wait until both tasks are completed (should take
+    # around 2 seconds.)
+    await task1
+    await task2
+
+    print(f"finished at {time.strftime('%X')}")
+
+    
+# ------------------------------------
+asyncio.run(main())         # asyncio.run() 函数用来运行最高层级的入口点
+# started at 17:14:32
+# hello                     # 等待 1 秒后打印 "hello"
+# world                     # 再次 等待 1 秒后打印 "world"(并发)
+# finished at 17:14:34
+```
+
+## 可等待对象
+
+<u>**如果一个对象可以在 `await` 语句中使用，那么它就是 可等待 对象。**</u>
+
+许多 asyncio API 都被设计为接受可等待对象。
+
+可等待 对象有三种主要类型: 
+
+- 协程
+- 任务 
+- Future
+
+### ① 协程
+
+Python 协程属于 可等待 对象，
+因此 <u>**可以在其他协程中被等待**</u> :
+
+```py
+# 运行文件 `4_.py` 看效果
+
+import asyncio
+
+async def nested():
+    return 42
+
+async def main():       
+    """
+    async 协程中使用 await 调用两一个协程
+    """
+    # A coroutine object is created but not awaited,
+    # so it *won't run at all*.
+    # 一个协程对象被创建但未被 await, 是不会被运行的
+    # nested()              # 如果你单纯调用 async 协程. 什么都不会打印
+    
+    ret = await nested()    # 而当我们 await 协程，将得到协程 return 值
+    print(ret)              # will print "42".
+
+
+# -------------------------------------
+asyncio.run(main())
+```
+
+**重要** 
+
+在本文档中 "协程" 可用来表示两个紧密关联的概念:
+
+#### 协程函数 
+
+定义形式为 `async def` 的函数;
+
+#### 协程对象
+
+调用 协程函数 所 <u>==返回==</u> 的对象。
+<br>
+
+asyncio 也支持旧式的 基于生成器的 协程。
+
+---
+
+### ② 任务 task
+
+任务 被用来 <u>**设置日程**</u> 以便 并发 执行协程。
+
+当一个协程通过 `asyncio.create_task()` 等函数被打包为一个 任务，
+该协程将自动 <u>排入日程</u> 准备 ==立即运行== :
+
+```py
+import asyncio
+
+async def nested():
+    return 42
+
+async def main():
+    # nested() 日程将会在 main() 调用的同时一起运行
+    task = asyncio.create_task(nested())
+
+    # "task" can now be used to cancel "nested()", 
+    # or can simply be awaited to wait until it is complete:
+    ret = await task
+    print(ret)
+
+
+# ----------------------------------
+asyncio.run(main())
+```
+
+
+---
+
+### ③ Future 对象
+
+Future 是一种特殊的 <u>低层级</u> 可等待对象，<u>**表示一个异步操作的 最终结果**</u>。
+
+当一个 Future 对象 被等待时，
+这意味着 <u>**协程将保持等待直到该 Future 对象在其他地方操作完毕**</u>。
+
+在 asyncio 中需要 `Future` 对象
+以便允许通过 `async`/`await` 使用基于回调的代码。
+
+通常情况下 <u>没有必要</u> 在应用层级的代码中创建 Future 对象。
+
+Future 对象有时会由库和某些 asyncio API 暴露给用户，用作可等待对象:
+
+```py
+# 伪代码
+async def main():
+    await function_that_returns_a_future_object()
+
+    # this is also valid:
+    await asyncio.gather(
+        function_that_returns_a_future_object(),
+        some_python_coroutine()
+    )
+```
+一个很好的返回对象的低层级函数的示例是 [loop.run_in_executor()](https://docs.python.org/zh-cn/3/library/asyncio-eventloop.html#asyncio.loop.run_in_executor)。
+
+---
+
+# asyncio 的使用 API
+
+## 运行 asyncio 程序 `run`
+
+执行 coroutine coro 并返回结果。
+```py
+asyncio.run(coro, *, debug=False)
+```
+
+asyncio.run 函数
+- <u>运行传入的协程</u>，
+- 负责<u>管理 asyncio 事件循环</u> 并 <u>完结异步生成器</u>。
+
+当有其他 asyncio 事件循环在同一线程中运行时，此函数不能被调用。
+
+如果 debug 为 True，事件循环将以调试模式运行。
+
+此函数总是会 <u>创建一个新的事件循环</u> 并在结束时关闭之。
+它应当被用作 **==asyncio 程序的主入口点==，理想情况下应当只被调用一次**。
+
+示例:
+
+```py
+async def main():
+    await asyncio.sleep(1)
+    print('hello')
+
+# ----------------------
+asyncio.run(main())
+```
+
+3.7 新版功能.
+
+注解 asyncio.run() 的源代码可以在 [Lib/asyncio/runners.py](https://github.com/python/cpython/blob/3.8/Lib/asyncio/runners.py) 中找到。
+
+<br>
+
+## 创建任务 `create_task`
+<u>**将 coro 协程 打包为一个 Task**</u> 排入日程准备执行。返回 Task 对象。
+```py
+asyncio.create_task(coro, *, name=None)
+```
+
+当 name 不为 None，它将使用 Task.set_name() 来设为任务的名称。
+
+该任务会在 **`get_running_loop()`** 返回的循环中执行，
+如果 <u>当前线程没有在运行的循环</u> 则会引发 **RuntimeError。**
+
+此函数 在 Python 3.7 中被加入。
+在 Python 3.7 之前，可以改用低层级的 `asyncio.ensure_future()` 函数。
+
+```py
+async def coro():
+    ...
+
+# In Python 3.7+
+task = asyncio.create_task(coro())
+...
+
+# This works in all Python versions but is less readable
+task = asyncio.ensure_future(coro())
+...
+```
+3.7 新版功能.
+
+在 3.8 版更改: 添加了 name 形参。
+
+---
+
+## 休眠 `sleep`
+阻塞 delay 指定的秒数。
+```py
+coroutine asyncio.sleep(delay, result=None, *, loop=None)
+```
+
+如果指定了 result，则当协程完成时将其返回给调用者。
+
+sleep() 总是会<u>**挂起当前任务，以允许其他任务运行**</u>。
+
+Deprecated since version 3.8, will be removed in version 3.10: loop 形参。
+
+以下协程示例运行 5 秒，每秒显示一次当前日期:
+
+```py
+# 6_.py 看效果
+import asyncio
+import datetime
+
+async def display_date():
+    loop = asyncio.get_running_loop()
+    end_time = loop.time() + 5.0
+    while True:
+        print(datetime.datetime.now())
+        if (loop.time() + 1.0) >= end_time:
+            break
+        await asyncio.sleep(1)
+
+# -------------------------------
+asyncio.run(display_date())     # 运行 5 秒，每秒显示一次当前日期
+```
+
+## 并发运行任务
+
+并发 运行 aws 序列中的 可等待对象。
+如果 aws 中的某个可等待对象为协程，它将自动作为一个任务加入日程。
+```py
+awaitable asyncio.gather(*aws, loop=None, return_exceptions=False)
+```
+
+
+如果所有可等待对象都成功完成，结果将是一个由所有返回值聚合而成的列表。结果值的顺序与 aws 中可等待对象的顺序一致。
+
+如果 return_exceptions 为 False (默认)，所引发的首个异常会立即传播给等待 gather() 的任务。aws 序列中的其他可等待对象 不会被取消 并将继续运行。
+
+如果 return_exceptions 为 True，异常会和成功的结果一样处理，并聚合至结果列表。
+
+如果 gather() 被取消，所有被提交 (尚未完成) 的可等待对象也会 被取消。
+
+如果 aws 序列中的任一 Task 或 Future 对象 被取消，它将被当作引发了 CancelledError 一样处理 -- 在此情况下 gather() 调用 不会 被取消。这是为了防止一个已提交的 Task/Future 被取消导致其他 Tasks/Future 也被取消。
+
+Deprecated since version 3.8, will be removed in version 3.10: loop 形参。
+
+示例:
+
+
+
+
+
+<br>
+<br><br><br><br><br>
+
+
+---
+
+```py
+
+```
+
+
+
+
+
