--- a/python/线程/协程（未完.md
+++ b/python/线程/协程（未完.md
@@ -17,22 +17,24 @@ async def main():   # async: 定义协程
 上例中的 main 方法就是我们定义的协程 。
 我们在交互环境(Python3.7)下执行以上代码，看看效果：
 ```py
->>> import asyncio
->>> async def main():
-...     print("hello")
-...     await asyncio.sleep(1)
-...     print("world")
+import asyncio
+
+async def main():       # asyncio 语法：函数前面加上 async 就表示这是个协程
+    print('hello')
+    await asyncio.sleep(1)  # await 表异步执行，交给 asyncio 控制
+    print('world')
 
 
->>> asyncio.run(main())     # run: 运行协程
-hello
-world
+# ----------------------------------------------------------
+asyncio.run(main())
+# hello
+# world
 ```
 需要注意的是：
 如果像执行普通代码一样直接调用`main()`，只会返回一个coroutine对象，`main()`方法内的代码不会执行：
 ```py
->>> main()      # 直接执行 main() 返回的是一个 coroutine 对象。
-<coroutine object main at 0x0000000002C97848>
+main()      # 直接执行 main() 返回的是一个 coroutine 对象。
+# <coroutine object main at 0x0000000002C97848>
 ```
 <br>
 
@@ -40,6 +42,34 @@ world
 ## 1. run()（执行
 使用`asyncio.run()`执行协程。
 一般用于<u>执行最顶层的入口函数</u>，如`main()`。
+
+```py
+import asyncio
+import time
+
+async def say_after(delay, what):
+    await asyncio.sleep(delay)
+    print(what)
+
+async def main():
+    print(f"started at {time.strftime('%X')}")
+
+    await say_after(1, 'hello')     # 等待一个协程
+    await say_after(2, 'world')
+
+    print(f"finished at {time.strftime('%X')}")
+
+
+# ------------------------------------
+asyncio.run(main())         # asyncio.run() 函数用来运行最高层级的入口点
+# started at 17:13:52
+# hello
+# world
+# finished at 17:13:55
+```
+
+
+
 <br>
 
 ## 2. await（等待
@@ -47,23 +77,33 @@ world
 一般用于<u>在一个协程中调用另一协程</u>。 如下是一个示例：
 
 ```py
->>> import time
->>> async def say_after(delay, word):
-        await asyncio.sleep(delay)
-        print(word)
+import asyncio
+import time
 
->>> async def main():
-        print(f"started at {time.strftime('%X')}")
-        await say_after(1, "hello")  # await: 在一个协程中调用另一协程
-        await say_after(2, "world")
-        print(f"finished at {time.strftime('%X')}")
+async def say_after(delay, what):
+    await asyncio.sleep(delay)
+    print(what)
 
+async def main():
+    task1 = asyncio.create_task(say_after(1, 'hello'))
+    task2 = asyncio.create_task(say_after(2, 'world'))
 
->>> asyncio.run(main())
-started at 16:47:10
-hello
-world
-finished at 16:47:13
+    print(f"started at {time.strftime('%X')}")
+
+    # Wait until both tasks are completed (should take
+    # around 2 seconds.)
+    await task1
+    await task2
+
+    print(f"finished at {time.strftime('%X')}")
+
+    
+# ------------------------------------
+asyncio.run(main())         # asyncio.run() 函数用来运行最高层级的入口点
+# started at 17:14:32
+# hello
+# world
+# finished at 17:14:34
 # 执行耗时 3秒
 ```
 
