--- a/算法与数据结构/数据结构与算法进阶/进度记录.md
+++ b/算法与数据结构/数据结构与算法进阶/进度记录.md
@@ -10,8 +10,8 @@
 
 # **Next TODO**
 
-- [ ] 动态规划的初级练习题写了一遍，图片笔记需要整理，这一 part 完了才可以接下一 part （到动态规划的部分去看具体 TODO
-- [ ] 下一 part：**==双指针==**（双指针视频还没看完，可以把前面看完的先照着写一遍然后接着边看视频边照着写
+- [ ] 当前 part：**动态规划** 去那一 part 看 TODO
+- [ ] 下一 part：**==堆==**
 
 
 
@@ -253,7 +253,7 @@
 
 ## 图 Graph
 
-
+视频只看了一点
 
 
 
@@ -279,7 +279,7 @@
 ## 双指针 TwoPointer
 
 
-
+（双指针视频还没看完，可以把前面看完的先照着写一遍然后接着边看视频边照着写
 
 
 
@@ -342,8 +342,8 @@
 
 **TODO**
 
-- [ ] 初级练习题：大部分跟着写了一遍，还有两题没有答案需要自己做（做完了才可以进行下一 part
 - [ ] 图片上传到简书，然后把链接整理到 markdown 文档
+- [ ] 初级练习题：大部分跟着写了一遍，还有两题没有答案需要自己做（做完了才可以进行下一 part
 - [ ] 去 leetcode 找题目练练手，最好这一 part 已经熟练了再去下一 part
 
 
