--- a/算法与数据结构/数据结构与算法进阶/进度记录.md
+++ b/算法与数据结构/数据结构与算法进阶/进度记录.md
@@ -332,7 +332,7 @@
 ### 2. 入室抢劫（House Robber
 ### 3. 入室抢劫(II)（House Robber II
 ### 4. 组织聚会（Planning Party **TODO**
-### 5. 瓷砖问题（Tile tiles Problem **TODO**
+### 5. 瓷砖问题（Tile tiles Problem
 ### 6. 最小台阶问题（Min Cost Climbing Stairs
 ### 7. 求编码方式（Decode Way
 ### 8. 独特二叉树的搜索路径（Unique Binary Search Tree
