--- a/算法与数据结构/数据结构与算法进阶/进度记录.md
+++ b/算法与数据结构/数据结构与算法进阶/进度记录.md
@@ -10,8 +10,19 @@
 
 # **Next TODO**
 
-- [ ] 当前 part：**动态规划** 去那一 part 看 TODO
-- [ ] 下一 part：**==堆==**
+
+- **当前 part**：**==堆==**
+    - [ ] 把在宿舍做的堆的笔记合并过来
+
+
+<br>
+<!-- --------------------------------- -->
+
+- [ ] **下一 part**：**动态规划** 
+去那一 part 看 TODO
+动态规划有一道 <u>最大子序和</u> 不明白，看了后面的教程还有两部分，其中包含这题。
+先去堆那一 part 再回来 动态规划
+
 
 
 
@@ -226,7 +237,7 @@
 
 ---
 
-## 堆 Heap
+## **堆 Heap**
 
 
 
@@ -273,6 +284,7 @@
 
 <br>
 <br>
+<br>
 
 ---
 
@@ -296,6 +308,7 @@
 
 
 
+<br>
 <br>
 <br>
 
@@ -328,17 +341,6 @@
 
 ## **动态规划 DynamicProgramming**
 
-### 1. 给定的数求和的不同方式（Number Problem
-### 2. 入室抢劫（House Robber
-### 3. 入室抢劫(II)（House Robber II
-### 4. 组织聚会（Planning Party **TODO**
-### 5. 瓷砖问题（Tile tiles Problem
-### 6. 最小台阶问题（Min Cost Climbing Stairs
-### 7. 求编码方式（Decode Way
-### 8. 独特二叉树的搜索路径（Unique Binary Search Tree
-### 9. 最大子序列乘积（Maximum Product Subarray
-
-<br>
 
 **TODO**
 
@@ -348,6 +350,19 @@
 
 
 
+<br>
+
+**练习题：**
+
+### 1. 给定的数求和的不同方式（Number Problem
+### 2. 入室抢劫（House Robber
+### 3. 入室抢劫(II)（House Robber II
+### 4. 组织聚会（Planning Party **TODO**
+### 5. 瓷砖问题（Tile tiles Problem
+### 6. 最小台阶问题（Min Cost Climbing Stairs
+### 7. 求编码方式（Decode Way
+### 8. 独特二叉树的搜索路径（Unique Binary Search Tree
+### 9. 最大子序列乘积（Maximum Product Subarray
 
 
 
