--- a/算法与数据结构/数据结构与算法进阶/进度记录.md
+++ b/算法与数据结构/数据结构与算法进阶/进度记录.md
@@ -12,7 +12,7 @@
 
 
 - **当前 part**：**==堆==**
-    - [ ] 把在宿舍做的堆的笔记合并过来
+去那一 part 看 TODO
 
 
 <br>
@@ -26,7 +26,12 @@
 
 
 
-# ALL TODO
+# ==同类解法归纳==
+
+**动态候选池：**
+- Ugly Number II ：求前/第 n 个 Ugly Number (heap)
+
+
 
 
 
@@ -239,10 +244,19 @@
 
 ## **堆 Heap**
 
+**TODO：**
+
+- [ ] 练习 1 快要写完了 还有练习 2
+- [ ] 第 4 题的思路在 iPad 上画出来 这是比较经典的一种解法，需要熟练理解
 
 
+<br>
 
-
+### 1. 数组中第 k 个最大的元素
+### 2. TopK 问题
+### 3. Ugly Number
+### 4. Ugly Number II （动态候选池问题）（TODO
+### 5. 求加和值最小的 k 对 pair（上一题延伸
 
 
 
