--- a/算法与数据结构/数据结构与算法进阶/进度记录.md
+++ b/算法与数据结构/数据结构与算法进阶/进度记录.md
@@ -258,7 +258,9 @@
 ### 4. Ugly Number II （动态候选池问题）（TODO
 ### 5. 求加和值最小的 k 对 pair（上一题延伸
 
-
+### 6. 合并 k 个有序序列 Merge K Sorted List TODO
+### 7.从数据流中获取中位数 Find Median From Data Stream TODO
+### 8. 管理你的项目 Manage Your Project (IPO)TODO
 
 
 
