two pointer notes

--- a/算法与数据结构/数据结构与算法进阶/进度记录.md
+++ b/算法与数据结构/数据结构与算法进阶/进度记录.md
@@ -11,12 +11,16 @@
 # **Next TODO**
 
 
-- **当前 part**：**==堆==**
-去那一 part 看 TODO
+- **当前 part**：**双指针**
 
 
 <br>
-<!-- --------------------------------- -->
+
+- **完成的 part:**
+
+
+- [ ] **==堆==**
+去那一 part 看 TODO
 
 - [ ] **下一 part**：**动态规划** 
 去那一 part 看 TODO
