note: vim, unittest

--- a/python/unittest/测试用例.md
+++ b/python/unittest/测试用例.md
@@ -96,6 +96,95 @@ class TestClass:
         assert hasattr(x, 'check')
 ```
 
+我们可以通过执行测试文件的方法，执行上面的测试：
+```
+$ py.test -q test_class.py
+.F
+================================= FAILURES =================================
+____________________________ TestClass.test_two ____________________________
+self = <test_class.TestClass object at 0x7fbf54cf5668>
+def test_two(self):
+x = "hello"
+> assert hasattr(x, 'check')
+E assert hasattr('hello', 'check')
+test_class.py:8: AssertionError
+1 failed, 1 passed in 0.01 seconds
+```
+从测试结果中可以看到，该测试共执行了两个测试样例，一个失败一个成功。
+同样，我们也看到失败样例的详细信息，和执行过程中的中间结果。
+
+# 5、如何编写 pytest 测试样例
+
+- **测试文件** 以 **`test_`** 开头（以 _test 结尾也可以） 
+- **测试类** 以 **`Test`** 开头，并且不能带有 __init__ 方法 
+- **测试函数** 以 **`test_`** 开头 
+- 断言使用基本的 `assert` 即可
+
+
+# 6、如何执行 pytest 测试样例
+
+执行测试样例的方法很多种，上面第一个实例是直接执行 py.test ，第二个实例是传递了测试文件给 py.test 。
+
+其实 py.test 有好多种方法执行测试：
+```python
+''' 在当前目录下执行所有可识别到的测试用例 '''
+# run all tests below current dir
+py.test
+```
+```python
+''' 指定文件 执行所有可识别到的测试用例 '''
+# run tests in module
+py.test test_mod.py
+```
+```python
+''' 指定 path 执行所有可识别到的测试用例 '''
+# run all tests below somepath
+py.test somepath
+```
+```python
+# only run tests with names that match the the "string expression", e.g. 
+# "MyClass and not method" will select TestMyClass.test_something but not TestMyClass.test_method_simple
+py.test -k stringexpr
+```
+```python
+''' 在 test_mod.py 文件内的 test_func 测试用例函数 '''
+# only run tests that match the "node ID", e.g 
+# "test_mod.py::test_func" will select only test_func in test_mod.py
+py.test test_mod.py::test_func 
+```
+
+
+# 7、测试报告
+
+pytest 可以方便的生成测试报告，即可以生成 HTML 的测试报告，也可以生成 XML 格式的测试报告用来与持续集成工具集成。 
+
+生成 HTML 格式报告：
+```
+py.test --resultlog=path
+```
+生成 XML 格式的报告：
+```
+py.test --junitxml=path
+```
+
+# 8、如何获取帮助信息
+
+其实对于测试而言，特别是在持续集成环境中，我们的所有测试最好是在虚拟环境中。
+这样不同的虚拟环境中的测试不会相互干扰的。 
+由于我们的实际工作中，在同一个 Jekins 中，运行了好多种不同项目册的测试，
+因此，各个测试项目运行在各自的虚拟环境中。 
+
+将 pytest 安装在虚拟环境中： 
+
+- 1 、将当前目录创建为虚拟环境
+```
+virtualenv .        # create a virtualenv directory in the current directory
+source bin/activate # on unix
+```
+- 2、在虚拟环境中安装pytest：
+```
+pip install pytest
+```
 
 
 
