--- a/系统架构/分布式高并发架构演变.md
+++ b/系统架构/分布式高并发架构演变.md
@@ -1,6 +1,6 @@
 [转载！从新手到架构师，一篇就够：从100到1000万高并发的架构演进之路](http://www.52im.net/thread-2665-1-1.html)
 
-文章出处 ：[服务端高并发分布式架构演进之路](segmentfault.com/a/1190000018626163)
+文章出处 ：[服务端高并发分布式架构演进之路](https://segmentfault.com/a/1190000018626163)
 
 # 目录
 
@@ -85,6 +85,7 @@ huashiou：广东工业大学计算机科学与技术硕士毕业，大数据开
 # 6、第一次演进：Tomcat 与数据库分开部署
 
 ![img](http://www.52im.net/data/attachment/forum/201907/17/143946s62j2x7qrj6wz0a2.png)
+
 
 Tomcat 和数据库分别独占服务器资源，显著提高两者各自性能。
 
