--- a/python/电子书/《流畅的python》/code/18章 使用asyncio包处理并发/官方 asyncio 文档学习/地址.md
+++ b/python/电子书/《流畅的python》/code/18章 使用asyncio包处理并发/官方 asyncio 文档学习/地址.md
@@ -86,8 +86,9 @@ asyncio.run(main())         # asyncio.run() 函数用来运行最高层级的入
 
 让我们修改以上示例，并发 运行两个 say_after 协程:
 
-③ asyncio.create_task() 函数用来并发运行作为 asyncio 任务 的多个协程。示例代码
+- ③ **`asyncio.create_task()`** 函数。示例代码
 
+用来并发运行作为 asyncio 任务 的多个协程
 可以看到，跟 ② 的示例相比，快了一秒，因为是并发
 
 ```py
@@ -99,13 +100,13 @@ async def say_after(delay, what):
     print(what)
 
 async def main():
-    task1 = asyncio.create_task(say_after(1, 'hello'))
+    task1 = asyncio.create_task(say_after(1, 'hello'))  # 想象成是开线程（不过这里开的是协程）
     task2 = asyncio.create_task(say_after(2, 'world'))
 
     print(f"started at {time.strftime('%X')}")
 
-    # Wait until both tasks are completed (should take
-    # around 2 seconds.)
+    # Wait until both tasks are completed (should take around 2 seconds.)
+    # 等待 2 个 task 都执行完毕
     await task1
     await task2
 
@@ -315,7 +316,7 @@ coroutine asyncio.sleep(delay, result=None, *, loop=None)
 
 如果指定了 result，则当协程完成时将其返回给调用者。
 
-sleep() 总是会<u>**挂起当前任务，以允许其他任务运行**</u>。
+sleep() 总是会<u>**==挂起当前任务，以允许其他任务运行==**</u>。
 
 Deprecated since version 3.8, will be removed in version 3.10: loop 形参。
 
