--- a/python/单例模式.md
+++ b/python/单例模式.md
@@ -18,7 +18,8 @@
 
 
 其实，<u>Python 的模块就是天然的单例模式</u> 。
-因为模块在第一次导入时，会生成 .pyc 文件，当第二次导入时，就会直接加载 .pyc 文件，而不会再次执行模块代码。
+因为**模块在第一次导入时，会生成 .pyc 文件，
+当第二次导入时，就会直接加载 .pyc 文件**，而不会再次执行模块代码。
 
 **==把相关的函数和数据定义在一个模块中，就可以获得一个单例对象了。==**
 如果我们真的想要一个单例类，可以考虑这样做：
@@ -66,15 +67,16 @@ print(id(one), id(two)) # (4303862608, 4303862608)
 ```py
 from functools import wraps
 
-def singleton(cls):
-    instances = {}
+def Singleton2(cls):    # 类装饰器
+    _instance = {}
     @wraps(cls)
-    def getinstance(*args, **kw):
-        # 存入实例字典并返回
-        if cls not in instances:
-            instances[cls] = cls(*args, **kw)
-        return instances[cls]
-    return getinstance
+    def wrapper(*args, **kwargs):
+        # 注意：在返回之前先存入字典做记录，然后再返回 
+        if cls not in _instance:
+            _instance[cls] = cls(*args, **kwargs)
+        return _instance[cls]
+    return wrapper
+
 
 @singleton
 class MyClass(object):
