--- a/python/装饰器.md
+++ b/python/装饰器.md
@@ -101,7 +101,7 @@ def decorator(func):
 请你仔细再读读上面这段代码，我们的decorator中`return inner`返回的仅仅是inner函数吗? 答案是不。<br>它返回的其实是个 **==闭包(Closure)==**。<br>整个装饰器的工作都依赖于Python的闭包原理。
 
 ### 闭包定义
-如果一个外函数中定义了一个内函数，且内函数体内引用到了体外的变量，<br>这时外函数通过 return 返回内函数的引用时，<br>会把定义时涉及到的**外部引用变量**`fun(*args,**kwargs)`和**内函数**`inner()`打包成一个整体（闭包）返回。<br>==即包起来的函数里面又包了一层函数==
+如果**一个外函数中定义了一个内函数，且内函数体内引用到了体外的变量**，<br>这时外函数通过 return 返回内函数的 ==**引用**==(<span style="color:red">注意不是返回内函数，而是返回内函数的引用</span>)时，<br>会把定义时涉及到的**外部引用变量**`fun(*args,**kwargs)`和**内函数**`inner()`打包成一个整体（闭包）返回。
 
 所以 上面的代码
 ```py
@@ -124,7 +124,7 @@ f1 = outer(1)                       # 给第一个参数 x
 f1(10)                              # 给第二个参数 y
 ```
 一般一个函数运行结束的时候，临时变量会被销毁。<br>
-但是闭包是一个特别的情况。<br>**当外函数发现，自己的==临时变量==会在将来的内函数中用到，自己在结束的时候，返回内函数的同时，会把外函数的临时变量同内函数绑定在一起**。<br>这样即使外函数已经结束了，内函数仍然能够使用外函数的临时变量。这就是闭包的强大之处。
+但是闭包是一个特别的情况。<br>**当外函数发现，自己的==临时变量==会在将来的内函数中用到，自己在结束的时候，返回内函数的同时，会把外函数的临时变量同内函数绑定在一起**。<br>这样 ==即使外函数已经结束了，内函数仍然能够使用外函数的临时变量==。这就是闭包的强大之处。
 
 # 二、如何编写装饰器
 我们现在可以开始动手写个名为`hint`的装饰器了，其作用是在某个函数运行前给我们提示。这里外函数以`hint`命名，内函数以常用的`wrapper`(包裹函数)命名。
