--- a/算法与数据结构/原数据结构学习整理/5_堆.md
+++ b/算法与数据结构/原数据结构学习整理/5_堆.md
@@ -1,3 +1,8 @@
+[toc]
+
+---
+
+
 ## 堆 -- 完全二叉树
 
 堆分为 
@@ -11,8 +16,8 @@
 
 ### topk 问题 -- 借助最小堆
 
-![topk_throught_minheap](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/topk_throught_minheap.png?raw=true)
-
+<!-- ![topk_throught_minheap](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/topk_throught_minheap.png?raw=true) -->
+![topk_throught_minheap.png](https://upload-images.jianshu.io/upload_images/11876740-c4300912a3b0e238.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 ```py
 import heapq
