--- a/算法与数据结构/原数据结构学习_排序_查找/排序/所有排序.md
+++ b/算法与数据结构/原数据结构学习_排序_查找/排序/所有排序.md
@@ -10,7 +10,8 @@ https://github.com/yesdino/img_upload/blob/master/sort/Bubble_Sort.gif?raw=true
 [排序动画](https://zhuanlan.zhihu.com/p/52884590)
 
 # 1. 插入排序 √ **（排麻将**
-![插入排序](https://github.com/yesdino/img_upload/blob/master/sort/Insert_Sort.gif?raw=true)
+<!-- ![插入排序](https://github.com/yesdino/img_upload/blob/master/sort/Insert_Sort.gif?raw=true) -->
+![Insert_Sort.gif](https://upload-images.jianshu.io/upload_images/11876740-6eba47a94b466114.gif?imageMogr2/auto-orient/strip)
 
 遍历列表中每一数，每个数一次跟列表其他数比较一遍，放在合适的位置。
 找到合适的位置时，其后面的数会都向后挪出一个位置给此时正在比较的数
@@ -32,7 +33,10 @@ print insertSort([1,5,2,6,9,3])
 # 2. 希尔排序（Shell Sort）
 插入排序的修改版。
 根据步长由长到短分组，进行排序，直到步长为1为止，属于插入排序的一种。
-![image](https://github.com/yesdino/img_upload/blob/master/sort/Shell_Sort.png?raw=true)
+<!-- ![image](https://github.com/yesdino/img_upload/blob/master/sort/Shell_Sort.png?raw=true) -->
+
+<img width=450 src="https://upload-images.jianshu.io/upload_images/11876740-e2c31544d7c0a72d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"><img>
+
 ```py
 #引用网址：http://www.cnblogs.com/qlshine/p/6052223.html
 def shellSort(nums):    # 没看懂
@@ -50,25 +54,16 @@ def shellSort(nums):    # 没看懂
 <br>
 
 # 3. 选择排序 √
+
+![Selection_Sort.gif](https://upload-images.jianshu.io/upload_images/11876740-217680f2fc7f70e5.gif?imageMogr2/auto-orient/strip)
 ```py
 比如在一个长度为 N 的无序数组中：
 
-第 1 趟  : 遍历 N 个数据，找出其中最小的数值与第一个元素交换，
-第 2 趟  : 遍历剩下的 N-1 个数据，找出其中最小的数值与第二个元素交换
+第 1 趟  : 遍历 N 个数据，找出其中最小的数值与第 1 个元素交换，
+第 2 趟  : 遍历剩下的 N-1 个数据，找出其中最小的数值与第 2 个元素交换
 ......
-第 N-1 趟: 遍历剩下的 2 个数据，找出其中最小的数值与第N-1个元素交换，至此选择排序完成。
+第 N-1 趟: 遍历剩下的 2 个数据，找出其中最小的数值与第 N-1 个元素交换，至此选择排序完成。
 ```
-```py
-以下面5个无序的数据为例：
-56 12 80 91 20（文中仅细化了第一趟的选择过程）
-
-第 1 趟：12 56 80 91 20
-第 2 趟：12 20 80 91 56
-第 3 趟：12 20 56 91 80
-第 4 趟：12 20 56 80 91
-```
-
-
 <!-- 
 TODO:
 ![image](https://img-my.csdn.net/uploads/201208/28/1346124560_3555.jpg) 
@@ -83,18 +78,26 @@ def select_sort(lis):
                 min = j
         lis[i], lis[min] = lis[min], lis[i]
 ```
-选择排序比冒泡排序时间上要优秀一点，主要在于，每一轮冒泡排序每次比较都需要交换位置，而选择排序每一轮通过记录最大或最小位置的索引最后只交换一次位置就可以了
+选择排序比冒泡排序时间上要优秀一点，
+主要在于，每一轮冒泡排序每次比较都需要交换位置，
 
+<u>而选择排序每一轮
+通过记录最大或最小位置的索引，最后只交换一次位置就可以了
+</u>
 <br>
 
 # 4. 基数排序（Radix Sort）
+
+![基数排序.gif](https://upload-images.jianshu.io/upload_images/11876740-6fdf973aee7a8499.gif?imageMogr2/auto-orient/strip)
 TODO
 <br>
 <br>
 
 
 # 5. 冒泡排序 √
-![冒泡排序](https://github.com/yesdino/img_upload/blob/master/sort/Bubble_Sort.gif?raw=true)
+<!-- ![冒泡排序](https://github.com/yesdino/img_upload/blob/master/sort/Bubble_Sort.gif?raw=true) -->
+
+![Bubble_Sort.gif](https://upload-images.jianshu.io/upload_images/11876740-2afac068a1ace847.gif?imageMogr2/auto-orient/strip)
 
 ```
 冒泡排序 【 思路 】：
@@ -114,11 +117,12 @@ def bubbleSort(lis):
 <br>
 
 # 6. 归并排序（Merge Sort） √
-![归并排序](https://github.com/yesdino/img_upload/blob/master/sort/Merge_Sort.gif?raw=true)
 
-![归并排序](https://github.com/yesdino/img_upload/blob/master/sort/Merge_Sort.png?raw=true)
 
-```
+<img src="https://upload-images.jianshu.io/upload_images/11876740-91e7619da93c5d40.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240" width='500'><img>
+<img src="https://upload-images.jianshu.io/upload_images/11876740-ef6cca4ed7adb2d1.gif?imageMogr2/auto-orient/strip" width='400'><img>
+
+```html
 归并排序 【 思路 】：分治法
   1. 分 : 以一个数作为基准 (这里用中间值)，将原序列分开为 两个子序列  (递归进去时做的步骤, 直到只有一个元素)
   2. 治 : 从最小的序列开始 合并两个有序序列                         (递归出来时做的步骤，一直做到最外面那层递归）
@@ -154,9 +158,9 @@ def merge_sort(seq):
     else:
         mid = int(len(seq)/2)   # 中间的数作为基准数 mid: 基准数索引
         left_half = merge_sort(seq[:mid])
-        print('left_half :{}'.format(left_half))
+        # print('left_half :{}'.format(left_half))
         right_half = merge_sort(seq[mid:])
-        print('rght_half :{}'.format(right_half))
+        # print('rght_half :{}'.format(right_half))
         # 到这里时 left_half, right_half 分别都是有序序列
         return merge_sorted_list(left_half, right_half)
 
@@ -180,9 +184,13 @@ if __name__ == '__main__':
 # 7. 堆排序（Heap Sort）
 堆排序是一种基于二叉堆（Binary Heap）结构的排序算法，
 所谓二叉堆，我们通过完全二叉树来对比，只不过相比较完全二叉树而言，二叉堆的所有父节点的值都大于（或者小于）它的孩子节点，像这样：
-![堆排序](https://github.com/yesdino/img_upload/blob/master/sort/Heap_Sort.png?raw=true)
+<!-- ![堆排序](https://github.com/yesdino/img_upload/blob/master/sort/Heap_Sort.png?raw=true)
 
-![堆排序](https://github.com/yesdino/img_upload/blob/master/sort/Heap_Sort2.png?raw=true)
+![堆排序](https://github.com/yesdino/img_upload/blob/master/sort/Heap_Sort2.png?raw=true) -->
+
+<img width='200' src="https://upload-images.jianshu.io/upload_images/11876740-82bf2b787938305e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"><img>
+
+<img width='450' src="https://upload-images.jianshu.io/upload_images/11876740-893a4650c2d0afd3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"><img>
 
 
 首先需要引入最大堆的定义：
@@ -196,10 +204,11 @@ if __name__ == '__main__':
 <br>
 <br>
 
-# 9. 快速排序（Quick Sort）√
-![快排](https://github.com/yesdino/img_upload/blob/master/sort/Quick_Sort2.png?raw=true)
+# 9. 快速排序 **partition**（Quick Sort）√
 
-![快排](https://github.com/yesdino/img_upload/blob/master/sort/Quick_Sort.png?raw=true)
+<img style="width:450" src="https://upload-images.jianshu.io/upload_images/11876740-7a556994a83bffb2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"><img>
+
+<img style="width:450" src="https://upload-images.jianshu.io/upload_images/11876740-e2c31544d7c0a72d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"><img>
 
 
 ```py
@@ -236,3 +245,29 @@ def partitionSeq(Sep, first, last):
 
 ```
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
