--- a/算法与数据结构/数据结构与算法进阶/08_____链表.md
+++ b/算法与数据结构/数据结构与算法进阶/08_____链表.md
@@ -33,7 +33,7 @@ class LinkedList:
     def peek(self):
         """找到头结点（因为第一个是哨兵结点）"""
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
         return self.head.next
     
     def add_first(self, value):
@@ -56,7 +56,7 @@ class LinkedList:
         if (index < 0 or index >= self.length):
             raise Outbound('index is out of bound')
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
         
         node = self.head
         for _ in range(index):
@@ -70,13 +70,13 @@ class LinkedList:
     def get_first(self):
         """找到头结点 O(1)"""
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
         return self.head.next
     
     def get_last(self):
         """找到最后一个结点 O(n)"""
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
         node = self.head
         while node.next != None:
             node = node.next
@@ -87,7 +87,7 @@ class LinkedList:
         if (index < 0 and  index >= self.length):
             raise ValueError('index is out of bound')
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
 
         node = self.head.next
         for _ in range(index):
@@ -97,7 +97,7 @@ class LinkedList:
     def remove_first(self):
         """删除头结点"""
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
         re_node = self.head.next
         self.head.next = self.head.next.next
         self.length -= 1
@@ -106,7 +106,7 @@ class LinkedList:
     def remove_last(self):
         """删除最后一个结点"""
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
         node_pre = self.head
         node = self.head.next
         while node.next != None:
@@ -121,7 +121,7 @@ class LinkedList:
         if (index < 0 or index >= self.length):
             raise ValueError('index is out of bound')
         if not self.head.next:
-            raise ValueError('LinkedList id empty')
+            raise ValueError('LinkedList is empty')
             
         node = self.head
         for _ in range(index):
