--- a/未分类/全部复习知识点汇总.md
+++ b/未分类/全部复习知识点汇总.md
@@ -514,8 +514,8 @@ class Solution:
 
 ### topk 问题 -- 借助最小堆
 
-![topk_throught_minheap](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/topk_throught_minheap.png?raw=true)
-
+<!-- ![topk_throught_minheap](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/topk_throught_minheap.png?raw=true) -->
+![topk_throught_minheap.png](https://upload-images.jianshu.io/upload_images/11876740-c4300912a3b0e238.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 ```py
 import heapq
