--- a/未分类/全部复习知识点汇总.md
+++ b/未分类/全部复习知识点汇总.md
@@ -570,7 +570,8 @@ if __name__ == '__main__':
 
 ### 合并K个有序链表 -- 借助最小堆
 
-![merge_k_sort_linked](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/merge_k_sort_linked.png?raw=true)
+<!-- ![merge_k_sort_linked](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/merge_k_sort_linked.png?raw=true) -->
+![merge_k_sort_linked.png](https://upload-images.jianshu.io/upload_images/11876740-26431102dab3b283.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 ```py
 # 链表节点
