--- a/大数据/Hadoop/Spark/慕课学习.md
+++ b/大数据/Hadoop/Spark/慕课学习.md
@@ -4,6 +4,8 @@
 
 ---
 
+爽了爽了，就等我的升降椅了，然后我书桌就完美了
+
 
 # spark
 
@@ -20,7 +22,7 @@ spark 是一个 **快速** 且 **通用** 的集群计算平台
 - <b style="color:blue">Spark 是快速的</b>
   - Spark 扩充了流行的 Mapreduce 计算模型 
   - Spark 是 **基于内存** 的计算
-    (比如我们在处理大批量的数据时，难免会产生一些中间的数据，**这些中间的数据如果储存在磁盘就会有一些写入写出的操作影响性能**，而 Spark 会将这些数据储存在内存中，以此来提升性能）
+    (比如我们在处理大批量的数据时，难免会产生一些中间的数据，**这些中间的数据如果储存在磁盘就会有一些写入写出的操作影响性能**，而 ==Spark 会将这些数据储存在内存中==，以此来提升性能）
 - <b style="color:blue">Spark 是通用的</b>
     - Spark 的设计容纳了其它分布式系统拥有的功能
     批处理，迭代式计算，交互查询和流处理等
@@ -94,27 +96,105 @@ Spark 包括多个紧密集成的组件
 
 - **Spark 应用场景**
 
-时效性要求高的场景 （基于内存）
+时效性要求高的场景 （基于内存，**==中间的处理数据尽量不会落在硬盘上==**）
 机器学习等领域 （迭代计算）
+<br>
+
+<b style="font-size:20px;">Doug Cutting 的观点：</b>
+- 这是生态系统，每个组件都有其作用，各善其职即可
+- Spark 不具有 HDFS 的存储能力，要借助 HDFS 等持久化数据。
+- 大数据将会孕育出更多的新技术
+
+
+# Spark 安装
+[link](https://www.imooc.com/video/14394)
+
+<b style="font-size:20px;">Spark 运行环境：</b>
+
+Spark 是 Scala 写的，运行在 JVM 上，所以运行环境数 **Java7+** 。
+如果使用 Python API ，需要安装 Python2.6+ 或者 Python3.4+ 。
+
+下面是 spark 与 Scala 的版本对应关系：
+`Spark 1.6.2` - `scala 2.10` 
+`Spark 2.0.0` - `scala 2.11`
+注意版本一定要匹配，否则后面会应为版本不匹配带来很多问题
+<br>
+
+
+<b style="font-size:20px;">Spark下载：</b>
+
+下载地址：http://spark.apache.org/downloads.html
+搭 Spark 不需要 Hadoop，如有 hadoop集群，可下载相应的版本。
+
+下载之后解压，解压之后就可以看到 **spark 目录**
+
+下载步骤参考 [01:12](https://www.imooc.com/video/14394)
+
+
+## Spark 目录
+**`bin`** 包含用来和 Spark 交互的可执行文件，如 Spark shell
+**`core`**, **`streaming`**, **`python`**, ...... 包含主要组件的源代码
+**`examples`** 包含一些单机 Spark job ，你可以研究和运行这些例子
+<img width='550' src="https://upload-images.jianshu.io/upload_images/11876740-044b91219bf1dcda.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240"></img>
+
+
+## Spark Shell
+
+Spark 的 shel 使你能够处理分布在集群上的数据。
+Spark 把数据加载到节点的内存中，因此分布式处理可在秒级完成。
+快速迭代式计算，实时查询、分析一般能够在 shells 中完成。
+
+Spark 提供了 <u>**Python shells**</u> 和 <u>**Scala shells**</u>
+
+### Python Shell
+
+[03:48](https://www.imooc.com/video/14394)
+路径 `/bin/pyspark`
+
+
+### Scala Shell
+
+[04:28](https://www.imooc.com/video/14394)
+路径 `/bin/spark-shell`
+直接输入 `spark-shell` 即可进入 shell 环境
+
+下面用一个简单的例子实例如何用 Scala-shell 读取本都的文件，然后对本地文件的数据进行操作。
+实例
+```scala
+val lines = sc.textFile("/path/") // 返回一个 RDD
+lines.count()     // 计算文件的行数
+lines.first()     // 返回文件的第一行
+```
+
+#### 修改日志级别
+[08:14](https://www.imooc.com/video/14394)
 
 
 
+# Spark 开发环境搭建
+
+[link](https://www.imooc.com/video/14403)
+
+## Scala 安装
+
+下载地址 http://www.scala-lang.org/download/2.10.5.html
 
 
 
+## Idea 安装
+
+1、百度搜一下 Idea 的安装教程，注意安装要安装 JDK，因为 scala 需要有 Java 环境。
+
+2、安装完 Idea 之后
+下载 Scala 语言包，在系统中配置环境变量（搜一下百度）
+
+3、安装完 Idea 和 Scala 之后，
+还要在 Idea 中安装 Scala 插件（方便 Idea 使用 Scala）
+在 Idea 的 Setting 的 Plugin 中搜索 Scala，然后点击安装，安装之后重启即可。
+（此步骤可能会受网速影响导致安装失败，如果是这样的话那就去百度搜一下离线安装插件的方法）
 
 
-
-
-
-
-
-
-
-
-
-
-
+# 新建 Scala 项目
 
 
 
