--- a/大数据/大数据入门与路线.md
+++ b/大数据/大数据入门与路线.md
@@ -29,7 +29,7 @@
 
 第三节：Java和大数据是什么关系？
 1、 Hadoop：基于Java语言开发
-2、 Spark：基于 Scala语言，Sca1a基于Java语言
+2、 ：基于 Scala语言，Sca1a基于Java语言
 
 第四节：学习大数据需要的基础和路线
 
