--- a/leetcode笔记/栈/232. easy.用栈实现队列/232. easy.用栈实现队列.md
+++ b/leetcode笔记/栈/232. easy.用栈实现队列/232. easy.用栈实现队列.md
@@ -8,6 +8,8 @@
 
 ![make_queue_through_two_stack](https://github.com/yesdino/img_upload/blob/master/imooc_study/data_structure/make_queue_through_two_stack.png?raw=true)
 
+leetcode笔记\栈\232. easy.用栈实现队列\232_思路.png
+
 ### thought
 
 - **==借助两个栈，栈1放没倒过顺序的元素，栈2放倒序过的元素==**
