--- a/算法与数据结构/原数据结构学习_排序_查找/排序/所有排序.md
+++ b/算法与数据结构/原数据结构学习_排序_查找/排序/所有排序.md
@@ -95,7 +95,7 @@ TODO
 
 
 # 5. 冒泡排序 √
-<!-- ![冒泡排序](https://github.com/yesdino/img_upload/blob/master/sort/Bubble_Sort.gif?raw=true) -->
+![冒泡排序](https://github.com/yesdino/img_upload/blob/master/sort/Bubble_Sort.gif?raw=true)
 
 ![Bubble_Sort.gif](https://upload-images.jianshu.io/upload_images/11876740-2afac068a1ace847.gif?imageMogr2/auto-orient/strip)
 
