--- a/算法与数据结构/数据结构与算法进阶/05_01_二分搜索.md
+++ b/算法与数据结构/数据结构与算法进阶/05_01_二分搜索.md
@@ -1,28 +1,22 @@
 # Binary Search
 
 
+[toc]
 
-In this lecture, you will learn:
+<!-- In this lecture, you will learn: -->
 
-<a href='#Ex1'>Ex.1 Binary Search Review</a>
-
-<a href='#Ex2'>Ex.2 Binary Search Template 模板</a>
-
-<a href='#Ex3'>Ex.3 Find Min in Rotated Sorted Array 在旋转数组中搜索最小值</a>
-
-<a href='#Ex4'>Ex.4 Find in Rotated Array 在旋转数组中搜索值</a>
-
-<a href='#Ex5'>Ex.5 Search Insert Position 找到插入位置 </a>
-
-<a href='#Ex6'>Ex.6 Find Range 找到 target 区间</a>
-
-<a href='#Ex7'>Ex.7 Search in Sorted Array with Empty Strings 含有空字符串的数组中查找值</a>
-
-<a href='#Ex8'>Ex.8 Search 1st Position of element in Infinite Array 无限序列</a>
+<!-- <a href='#Ex1'>Ex.1 Binary Search Review</a> -->
+<!-- <a href='#Ex2'>Ex.2 Binary Search Template 模板</a> -->
+<!-- <a href='#Ex3'>Ex.3 Find Min in Rotated Sorted Array 在旋转数组中搜索最小值</a> -->
+<!-- <a href='#Ex4'>Ex.4 Find in Rotated Array 在旋转数组中搜索值</a> -->
+<!-- <a href='#Ex5'>Ex.5 Search Insert Position 找到插入位置 </a> -->
+<!-- <a href='#Ex6'>Ex.6 Find Range 找到 target 区间</a> -->
+<!-- <a href='#Ex7'>Ex.7 Search in Sorted Array with Empty Strings 含有空字符串的数组中查找值</a> -->
+<!-- <a href='#Ex8'>Ex.8 Search 1st Position of element in Infinite Array 无限序列</a> -->
 
 ---
 
-### <a id="Ex1">Ex.1: Binary Search Review</a>
+### Ex.1: Binary Search Review
 
 Find 1st position of target, return -1 if not found
 
@@ -55,7 +49,7 @@ print(bi_search_iter(num_list, 4))  # 7
 
 
 
-### <a id="Ex2">Ex.2: Binary Search Template 模板</a>
+### Ex.2: Binary Search Template 模板
 
 Remember? 
 
@@ -89,7 +83,7 @@ def binarysearch(lis, target):
 
 
 
-### <a id="Ex3">Ex.3 Find Min in Rotated Sorted Array 在旋转数组中搜索最小值</a>
+### Ex.3 Find Min in Rotated Sorted Array 在旋转数组中搜索最小值
 
 Suppose an array sorted in ascending order is rotated at some pivot unknown to you beforehand. Find the minimum element.
 
@@ -134,7 +128,7 @@ def search(lis):
         return lis[right]
 ```
 
-### <a id="Ex4">Ex.4 Find in Rotated Array 在旋转数组中搜索 target 值</a>
+### Ex.4 Find in Rotated Array 在旋转数组中搜索 target 值
 
 
 ```python
@@ -166,25 +160,23 @@ def search(lis, target):
     return -1
 ```
 
-### <a id="Ex5">Ex.5 Search Insert Position 找到插入位置</a>
-
-Given a sorted array and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order. You may assume no duplicates in the array
+### Ex.5 Search Insert Position 找到插入位置
 
 提供一个有序数组和一个 target 目标值，需要找到并返回 target 在数组中的索引。
 若找不到，返回 target 应该在有序数组中插入的位置索引
-
 
 ```python
 def search_insert_position(lis, target):
     if len(lis) == 0:
         return 0
+
     left, right = 0, len(lis) - 1
     while left + 1 < right:
         mid = left + (right - left) // 2
         if lis[mid] == target:
             return mid
         
-        if (lis[mid] < target):
+        if lis[mid] < target:
             left = mid
         else:
             right = mid
@@ -197,7 +189,7 @@ def search_insert_position(lis, target):
     return right + 1
 ```
 
-### <a id="Ex6">Ex.6  Find the starting and ending position of a given target value. 找到 target 区间</a>
+### Ex.6  Find the starting and ending position of a given target value. 找到 target 区间
 
 
 ```python
@@ -244,7 +236,7 @@ def search_range(lis, target):
     return (lbound, rbound)
 ```
 
-### <a id="Ex7">Ex.7 Search in Sorted Array with Empty Strings 含有空字符串的数组中查找值</a>
+### Ex.7 Search in Sorted Array with Empty Strings 含有空字符串的数组中查找值
 
 Given a sorted array of strings which is interspersed with empty strings, write a meth­od to find the location of a given string.
 
@@ -283,7 +275,7 @@ def search_empty(lis, target):
     return -1
 ```
 
-### <a id="Ex8">Ex.8 Search 1st Position of element in Infinite Array 无限序列</a>
+### Ex.8 Search 1st Position of element in Infinite Array 无限序列
 
 
 ```python
