--- a/算法与数据结构/数据结构与算法进阶/10_11_栈 and 队列.md
+++ b/算法与数据结构/数据结构与算法进阶/10_11_栈 and 队列.md
@@ -225,6 +225,14 @@ class LinkedQueue(object):  # 用链表构造队列
 
 # 练习
 
+## 有效的括号
+
+```py
+def Solut
+
+
+```
+
 ## 利用 stack 构造 queue **TODO**
 
 
@@ -278,7 +286,7 @@ class StackWithQueue:   # 使用 queue 实现 stack
 
 Design a stack that supports push, pop, top, and retrieving the minimum element in constant time.
 
-getMin() -- Retrieve the minimum element in the stack.
+`getMin()` -- Retrieve the minimum element in the stack.
 
 构造一个 stack, 操作 `push, pop, top` 函数的同时能检索到当前 stack 中所有元素的最小值
 
@@ -291,7 +299,7 @@ getMin() -- Retrieve the minimum element in the stack.
 此方法使用类继承，
 
 注意子类调用父类的方法：**`super(子类名, self)`** ==！！！==
-```
+```py
 import sys
 from ArrayStack import ArrayStack
 
