--- a/leetcode笔记/数组/204. 计数质数.md
+++ b/leetcode笔记/数组/204. 计数质数.md
@@ -48,3 +48,26 @@ class Solution(object):
                 output[i*i : n : i] = [0] * len(output[i*i : n : i])    # 将i的倍数置为0
         return sum(output)
 ```
+
+1.4 计算方法
+**短除法**
+求一个数分解质因数，要从最小的质数除起，一直除到结果为质数为止。
+
+分解质因数的算式的叫短除法，和除法的性质差不多，还可以用来求多个个数的公因式：
+求最大公因数的一种方法，也可用来求最小公倍数。
+
+求几个数最大公因数的方法，开始时用观察比较的方法，
+即：先把每个数的因数找出来，然后再找出公因数，最后在公因数中找出最大公因数。
+
+- 2 程序思路
+  
+**分解质因数代码**：
+将一个正整数分解质因数。
+例如：输入 `90` ,打印出 `90=233*5`。
+
+**程序分析**：
+对 n 进行分解质因数，<u>应先找到一个最小的质数 k</u>，然后按下述步骤完成：
+(1) 如果这个质数恰等于 n，则说明分解质因数的过程已经结束，打印出即可。
+(2) 如果 n>k ，但 n 能被 k 整除，则应打印出 k 的值（ k 为质因子）；并用 n 除以 k 的商 , 作为新的正整数你 n ；同时 k++
+　重复执行第一步。
+(3) 如果 n 不能被 k 整除，则用 k++,重复执行第一步。
